# machine-learnings

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: agents.py
langchain/: gpt.py
llms/: simple_network.py
regressions/: regression.ipynb  rl-cart-pole.py  rl-mario.py
transformers/: gpt.ipynb  sentiment_analysis.ipynb
