[project]
name = "machine-learnings"
version = "0.1.0"
description = "An exploration into understanding how machines learn."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=7.2.1",
    "e2b-code-interpreter>=1.0.4",
    "gradio>=5.12.0",
    "huggingface-hub>=0.27.1",
    "langchain>=0.3.15",
    "langsmith>=0.3.0",
    "litellm>=1.59.1",
    "markdownify>=0.14.1",
    "numpy>=1.26.4",
    "openai>=1.59.9",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "smolagents>=1.4.1",
    "sqlalchemy>=2.0.37",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.uv]
package = false
